Fix "See Project Button" alignment to page

--- a/style.css
+++ b/style.css
@@ -181,6 +181,23 @@ a:active {
   margin-top: 62px;
 }
 
+.grid-item {
+  height: 474px;
+  border-radius: 8px;
+  background-color: #ebf0ee;
+  border: 1px solid #d0d9d4;
+}
+
+.grid-item-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: #fff;
+  border-radius: 8px;
+  height: 222px;
+  margin-top: 252px;
+}
+
 .headline {
   font-family: Inter, sans-serif;
   font-size: 40px;
